feat: exercise 3 [Animal Kingdom Simulation]

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start:library" : "tsc && node src/library/index.js",
-    "start:shape" : "tsc && node src/shape/index.js"
+    "start:shape" : "tsc && node src/shape/index.js",
+    "start:kingdom" : "tsc && node src/kingdom/index.js"
   },
   "keywords": [],
   "author": "",
