--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "scripts": {
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
